--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hello world
+<htlm>
+<head>
+<title>Karmel.HTLM</title
+<head>
+<body bgcolor=green text=white
+<body width="1900" height="1570" background='IDR_THEME_NTP_ATTRIBUTION.png'>
+<br>
+MOJE ULUBIONE NUTY 21 07 2021
+
+<br /><br />
+
+<a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
+ <img src="tlo.png">
+
+ <br />
+
+<a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
+ KISS CAM MATa
+</a>32:00
