--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <htlm>
 <head>
 <title>Karmel.HTLM</title
-<head>
-<body bgcolor=green text=white
-<body width="1900" height="1570" background='gregoria.jpg">
+</head>
+</body>
+<dir bgcolor=green text=white
+<dir width="1900" height="1570" background='gregoria.jpg">
 <br>
 MOJE ULUBIONE NUTY 21 07 2021
 
@@ -17,3 +18,4 @@ MOJE ULUBIONE NUTY 21 07 2021
 <a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
  KISS CAM MATa
 </a>32:00
+</body>
