--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Karmel.HTLM</title
 </head>
-</body>
+<body>
    <dir bgcolor=green text=white
    <dir width="1900" height="1570" background='gregoria.jpg">
 <br>
