--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Karmel.HTLM</title
 </head>
 <body>
-   <dir bgcolor=green text=white
+   <dir bgcolor=green text=white>
    <dir width="1900" height="1570" background='gregoria.jpg">
 <br>
 MOJE ULUBIONE NUTY 21 07 2021
