--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <htlm>
 <head>
-<title>Karmel.HTLM</title
+   <title>Karmel.HTLM</title>
+   <dir width="1900" height="1570" background='gregoria.jpg">
 </head>
 <body>
    <dir bgcolor=green text=white>
-   <dir width="1900" height="1570" background='gregoria.jpg">
-<br>
-MOJE ULUBIONE NUTY 21 07 2021
+   <br>
+   MOJE ULUBIONE NUTY 21 07 2021
 
-<br /><br />
+   <br /><br />
 
-<a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
- <img src="tlo.png">
+   <a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
+   <img src="tlo.png">
 
- <br />
+   <br />
 
-<a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
- KISS CAM MATa
-</a>32:00
-</body>
+   <a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
+    KISS CAM MATa
+   </a>32:0
+ </body>
