--- a/index.html
+++ b/index.html
@@ -1,21 +1,102 @@
-<htlm>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-   <title>Karmel.HTLM</title>
-   <dir width="1900" height="1570" background='gregoria.jpg">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Putting User Input into JS Objects</title>
+    <style>
+        .formBox{
+            padding: 0.5rem 2rem;
+        }
+    </style>
 </head>
 <body>
-   <dir bgcolor=green text=white>
-   <br>
-   MOJE ULUBIONE NUTY 21 07 2021
+	<dir width="1900" height="1570" background="gregoria.jpg">
+    <form>
+        <div class="formBox">
+            <label for="title">Movie</label>
+            <input type="text" id="title" placeholder="Title"/>
+        </div>
+        <div class="formBox">
+            <label for="yr">Year</label>
+            <input type="number" id="yr" placeholder="Year"/>
+        </div>
+        <div class="formBox">
+            <button id="btn">Click to Add</button>
+        </div>
+		<p id="one"></p>
+			<button onclick="random()">Random</button>
+        <div id="msg">
+            <pre></pre>
+        </div>
+    </form>
+    <script>
+        let movies = [];
+        // example {id:1592304983049, title: 'Deadpool', year: 2015}
+        const addMovie = (ev)=>{
+            ev.preventDefault();  //to stop the form submitting
+            let movie = {
+                id: Date.now(),
+                title: document.getElementById('title').value,
+                year: document.getElementById('yr').value
+            }
+            movies.push(movie);
+            document.forms[0].reset(); // to clear the form for the next entries
+            //document.querySelector('form').reset();
 
-   <br /><br />
+            //for display purposes only
+            console.warn('added' , {movies} );
+            let pre = document.querySelector('#msg pre');
+            pre.textContent = '\n' + JSON.stringify(movies, '\t', 2);
 
-   <a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
-   <img src="tlo.png">
-
-   <br />
-
-   <a href="https://www.youtube.com/watch?v=z9HsSzoRT1Y" target="_blank" title="KISS CAM MATA ">
-    KISS CAM MATa
-   </a>32:0
- </body>
+            //saving to localStorage
+            localStorage.setItem('MyMovieList', JSON.stringify(movies) );
+        }
+        document.addEventListener('DOMContentLoaded', ()=>{
+            document.getElementById('btn').addEventListener('click', addMovie);
+        });
+		 function random()
+		{
+			var info = document.getElementById("one").innerHTML = Math.floor(Math.random() * 90000000);
+			console.warn(info);
+		}
+    </script>
+	1
+	<p>
+	2
+	1
+		<p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 <p> 1 
+	1
+	1
+	
+	1
+	1
+	1
+	
+	1
+	1
+	1
+	1
+	1
+	1
+	1
+	
+	1
+	1
+	1
+	
+	1
+	1
+	1
+	1
+	1
+	
+	1
+	1
+	1
+	1
+	
+	1
+</body>
+</html>
