--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 			body{
-				background-image:url(gregoria.png);
+				background-image:url(gregoria.jpg);
 				background-size: cover;
 				background-attachment: fixed;
 			}
